--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@shopify/shopify-api": "^8.0.1",
     "next": "13.5.4",
     "react": "^18",
     "react-dom": "^18"
