--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@vercel/analytics": "^1.1.1",
+    "framer-motion": "^11.0.3",
     "next": "13.5.4",
     "react": "^18",
     "react-dom": "^18"
