--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "framer-motion": "^11.0.3",
     "next": "13.5.4",
     "react": "^18",
-    "react-dom": "^18",
+    "react-dom": "^18"
   },
   "devDependencies": {
     "@types/node": "^20",
