--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next/third-parties": "^14.1.0",
     "@vercel/analytics": "^1.1.1",
     "framer-motion": "^11.0.3",
     "next": "13.5.4",
