--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@next/third-parties": "^14.1.0",
     "@vercel/analytics": "^1.1.1",
+    "@vercel/speed-insights": "^1.0.10",
     "framer-motion": "^11.0.3",
     "next": "13.5.4",
     "react": "^18",
